--- a/v3/React-BotFramework-WebChat/src/components/CollapsibleChat/CollapsibleChat.css
+++ b/v3/React-BotFramework-WebChat/src/components/CollapsibleChat/CollapsibleChat.css
@@ -25,3 +25,15 @@
     -webkit-box-shadow: 0 0 7px 1px #ababab;
     box-shadow: 0 0 7px 1px #ababab;
 }
+
+@media only screen and (max-width: 600px) {
+    .chatWindowContainer {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        max-height: 100vh;
+        height: 100%;
+        width: 100%;
+        border-radius: 0;
+    }
+}
